# mse_final_project

./: .gitignore  readme.md
src/: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml  readme.md
src/bert/: .dockerignore  .gitignore  Dockerfile  main.py  nodemon.json  requirements.txt
src/bert/app/util/: constants.py  db.py  logger.py  setup_jobs.py  types.py
src/crawler/: Dockerfile  build.gradle  pom.xml  settings.gradle  settings.gradle.kts
src/crawler/app/: build.gradle
src/crawler/gradle/wrapper/: gradle-wrapper.properties
src/frontier-acceptor/: .eslintrc  Dockerfile  index.ts  nodemon.json  package.json
src/frontier-acceptor/src/: app.ts
src/frontier-acceptor/src/constants/: index.ts
src/frontier-acceptor/src/db/: index.ts
src/indexer/: .gitignore  Dockerfile  go.mod  go.sum  hello.go  main.go  nodemon.json
src/indexer/cmd/indexer/: indexer.go  (+1 more)
src/indexer/util/: db.go
src/inverted-index/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/inverted-index/app/api/: blueprint.py
src/inverted-index/app/util/: fs.py
src/logs/: .eslintrc  .gitignore  Dockerfile  package.json  tsconfig.json
src/logs/src/: app.ts
src/logs/types/: custom.d.ts
src/logs/ui/: .eslintrc  package.json  tailwind.config.js
src/ranker/: Dockerfile  go.mod  main.go  nodemon.json
src/scripts/: collect-data.sh  connect-prod.sh  deploy-prod.sh  exclude-list.txt  start-db.sh  start-dev.sh  start-prod.sh  vars.sh
src/web-app/: .eslintrc.cjs  index.html  package.json  tsconfig.json
src/web-app/src/: index.css  main.tsx
(+155 files in other folders)
