[tool.poetry]
name = "inverted-index"
version = "0.1.0"
description = ""
authors = ["waron97 <winkler.aron5gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
pymongo = {extras = ["srv"], version = "^4.4.0"}
flask = "^2.3.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
